[package]
name = "come"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
bincode = "1.3.3"
bitvec = { version = "1.0.1", features=["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
enum_dispatch = "0.3.11"
ezio = "0.1.2"
indexmap = "1.9.3"
itertools = "0.10.5"
nom = "7.1.3"
paste = "1.0.12"
petgraph = "0.6.3"
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.162", features = ["derive"] }
shadow-rs = "0.21.0"
toml = "0.7.3"

[dev-dependencies]
cov-mark = "1.1.0"

[build-dependencies]
shadow-rs = "0.21.0"

[lib]
crate-type = ["lib"]
