[package]
name = "come"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bimap = "0.6.3"
bincode = "1.3.3"
bitvec = { version = "1.0.1", features = ["serde"] }
clap = { version = "4.4.14", features = ["derive"] }
enum_dispatch = "0.3.12"
indexmap = "2.1.0"
itertools = "0.13.0"
nom = "7.1.3"
paste = "1.0.14"
petgraph = "0.6.4"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"
shadow-rs = { version = "0.28.0", optional = true }
ezio = { version = "0.1.2", optional = true }
delegate = "0.12.0"
wasm-encoder = "0.209.1"

[dev-dependencies]
cov-mark = "1.1.0"

[build-dependencies]
shadow-rs = "0.28.0"

[lib]
crate-type = ["lib"]

[features]
build-binary = ["shadow-rs", "ezio"]

[[bin]]
name = "clefviewer"
required-features = ["build-binary"]

[[bin]]
name = "come"
required-features = ["build-binary"]

[[bin]]
name = "linker"
required-features = ["build-binary"]

[[bin]]
name = "road"
required-features = ["build-binary"]

[[bin]]
name = "shuasm"
required-features = ["build-binary"]
